# Tanks-Game

./: .gitignore  CMakeHelp.md  CMakeLists.txt  Enemy.cpp  Enemy.hpp  FinalToDo.md  Game  Makefile  README.md  ai_test.cpp  build_game.sh  first_team_credits.cpp  game.cpp  main  network_helloworld_adam.cpp  sdl2_bmp.cpp  setup.sh
Networking Hello World/: jakob_network_client.cpp  jakob_network_main.cpp  network_helloworld_adam.cpp
Random Gen Hello World/: Tile.hpp  tiling.cpp
Tests/: Enemy.cpp  Enemy.hpp  Graph.cpp  Makefile  Projectile.hpp  adam_network_main_map_test.cpp  adam_network_map_test_client.cpp  ai_avoidance.cpp  game.cpp  jakob_network_client.cpp  jakob_network_main.cpp  maze_algorithm.cpp  network_helloworld_adam.cpp  sdl6_keystates.cpp  tiling.cpp
Tests/quads/: .gitignore  Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  Map.cpp  Map.hpp  QuadConstants.cpp  Quadrant.cpp  Quadrant.hpp  Quads copy.cpp  Quads.cpp  Quads.hpp  Tileset.cpp  Tileset.hpp  a.out  main.out  map.cpp  quadconstants.cpp  quadconstants.hpp  quadrants.txt  quads.cpp  quads.hpp  quads.md  quads_out.txt
Tests/rotation test/: .readme.txt.swp  Makefile  rotating_tank.cpp
ai_test/: ai_avoidance.cpp
app/Client/: CMakeLists.txt  Client  Client.cpp
app/Credits/: first_team_credits.cpp
app/Server/: Server  Server.cpp
classes/: object.cpp  player.cpp
headers/: object.hpp  player.h  player.hpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt  game.cpp
source/app/Constants/: CMakeLists.txt  Constants.hpp
source/app/Controllers/: AIController.hpp  CMakeLists.txt  KeyboardController.hpp  NetworkController.hpp
source/app/Credits/: CMakeLists.txt  Credits.cpp  Credits.hpp
source/app/Enemy/: CMakeLists.txt  Enemy.cpp  Enemy.hpp
source/app/GameLoop/: CMakeLists.txt  GameLoop.cpp  GameLoop.hpp
source/app/InputContainer/: InputContainer.cpp
source/app/MapGeneration/: CMakeList.txt  CMakeLists.txt  line_map.cpp  lines_map.cpp  lines_map.hpp  mirror.cpp  mirror.hpp  mirror_map.cpp  mirror_map.hpp
source/app/Networking/: Network.cpp  Network.hpp
source/app/Object/: CMakeLists.txt  Object.cpp  Object.hpp
source/app/Player/: CMakeLists.txt  Player.cpp  Player.hpp
source/app/Projectile/: CMakeLists.txt  Projectile.hpp
source/app/Render/: CMakeLists.txt  Render.cpp  Render.hpp
source/app/Sprite/: Sprite.cpp  Sprite.hpp
source/app/StartUpMenu/: CMakeLists.txt  StartUpMenu.cpp
source/res/mapsets/: quadrants.txt  quads.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  game.cpp
src/app/Args/: Args.hpp  CMakeLists.txt
src/app/Bomb/: Bomb.cpp  Bomb.hpp  CMakeLists.txt
src/app/Box/: Box.hpp  CMakeLists.txt
src/app/Constants/: CMakeLists.txt  Constants.hpp
src/app/Controllers/: CMakeLists.txt  Controller.cpp  Controller.hpp  KeyboardController.cpp  KeyboardController.hpp  NetworkController.cpp  NetworkController.hpp
src/app/Credits/: CMakeLists.txt  Credits.cpp  Credits.hpp
src/app/Enemy/: CMakeLists.txt  Enemy.cpp  Enemy.cpp~4bc5d5e4148837c18f88883ac33e13b0d245b0a3  Enemy.hpp
src/app/Explosion/: CMakeLists.txt  Explosion.cpp  Explosion.hpp
src/app/GameLoop/: CMakeLists.txt  GameLoop.cpp  GameLoop.hpp  LocalGameLoop.cpp  LocalGameLoop.hpp  OnlineGameLoop.cpp  OnlineGameLoop.hpp
src/app/ImageLoader/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp
src/app/MapGeneration/: CMakeLists.txt  MapGenerator.hpp  line_map.hpp
src/app/MapGenerator/: CMakeLists.txt  Graph.cpp  Map.cpp  MapGenerator.cpp  MapGenerator.hpp  QuadConstants.hpp  Quads.cpp  Quads.hpp  Tileset.hpp
src/app/Multiplayer/: CMakeLists.txt  Header.cpp  Header.hpp  Multiplayer.cpp  Multiplayer.hpp  Packet.hpp  Socket.hpp
src/app/MultiplayerMenu/: CMakeLists.txt  MultiplayerMenu.cpp  MultiplayerMenu.hpp  keypressnotes.txt
src/app/Networking/: CMakeLists.txt  Client.cpp  Client.hpp  Network.cpp  Network.hpp  Server.cpp  Server.hpp
src/app/Object/: CMakeLists.txt  Object.cpp  Object.hpp
src/app/Player/: CMakeLists.txt  Player.cpp  Player.hpp
src/app/Projectile/: CMakeLists.txt  Projectile.cpp  Projectile.hpp
src/app/Render/: CMakeLists.txt  Render.cpp  Render.hpp
src/app/Sprite/: CMakeLists.txt  Sprite.cpp  Sprite.hpp
src/app/StartUpMenu/: CMakeLists.txt  StartUpMenu.cpp  StartUpMenu.hpp
src/app/Tanks/: CMakeLists.txt  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  Tank.cpp  Tank.hpp
src/app/Threading/: Makefile  Pool.hpp  test.cpp
src/app/Tile/: CMakeLists.txt  Tile.hpp
src/res/images/: tiles.pdn
tiling/: Tile.hpp  tiling.cpp
