add_library(GameLoop
  STATIC
  GameLoop.hpp
  GameLoop.cpp
)

if(${APPLE})
target_link_libraries(GameLoop
  PUBLIC
  Render
  Object
  Player
  Constants
  Enemy
  Sprite
  MapGenerator
  Projectile
  Networking
  Multiplayer
  Args
  Bomb
  ${SDL2_TTF_LIBRARIES}
  Box
)
else()
target_link_libraries(GameLoop
  PUBLIC
  Render
  Object
  Tank
  Constants
  Sprite
  MapGenerator
  Projectile
  Networking
  Multiplayer
  Args
  Bomb
  SDL2_ttf
  Box
)
endif()

target_include_directories(GameLoop
  PUBLIC
  .
)
