add_library(GameLoop
  STATIC
  LocalGameLoop.hpp
  LocalGameLoop.cpp
  OnlineGameLoop.hpp
  OnlineGameLoop.cpp
)

if(${APPLE})
target_link_libraries(GameLoop
  PUBLIC
  Render
  Object
  Tank
  Constants
  Sprite
  MapGenerator
  Projectile
  Networking
  Multiplayer
  Args
  Bomb
  Explosion
  ${SDL2_TTF_LIBRARIES}
  Box
)
else()
target_link_libraries(GameLoop
  PUBLIC
  Render
  Object
  Tank
  Constants
  Sprite
  MapGenerator
  Projectile
  Networking
  Multiplayer
  Args
  Bomb
  SDL2_ttf
  Box
  Explosion
)
endif()

target_include_directories(GameLoop
  PUBLIC
  .
)
