add_library(Multiplayer
  STATIC
  Multiplayer.hpp
  Multiplayer.cpp
)
target_include_directories(Multiplayer
  PUBLIC
  .
)
if(${APPLE})
target_link_libraries(Multiplayer
  PRIVATE
  ${SDL2_LIBRARY}
)
else()
target_link_libraries(Multiplayer
  PRIVATE
)
endif()

add_library(Header
  STATIC
  Header.hpp
  Header.cpp
)
target_include_directories(Header
  PUBLIC
  .
)
if(${APPLE})
target_link_libraries(Header
  PRIVATE
  ${SDL2_LIBRARY}
)
else()
target_link_libraries(Header
  PRIVATE
)
endif()

add_library(Packet
  STATIC
  Packet.hpp
  Packet.cpp
)
target_include_directories(Packet
  PUBLIC
  .
)
if(${APPLE})
target_link_libraries(Packet
  PRIVATE
  ${SDL2_LIBRARY}
)
else()
target_link_libraries(Packet
  PRIVATE
)
endif()