add_library(Networking
  STATIC
  Network.hpp
  Network.cpp
  Client.cpp
  Client.hpp
)

target_include_directories(Networking
  PUBLIC
  .
)
if(${APPLE})
target_link_libraries(Networking
  PRIVATE
  MapGenerator
  Multiplayer
  ${SDL2_LIBRARY}
  ${SDL2_IMAGE_LIBRARIES}
)
else()
target_link_libraries(Networking
  PRIVATE
  MapGenerator
  Multiplayer
  SDL2
)
endif()


add_library(Server
  STATIC
  Server.cpp
  Server.hpp
)

target_include_directories(Server
  PUBLIC
  .
)

if(${APPLE})
target_link_libraries(Server
  PRIVATE
  MapGenerator
  ${SDL2_LIBRARY}
  ${SDL2_IMAGE_LIBRARIES}
  ${SDL2_TTF_LIBRARIES}
  Multiplayer
  Constants
  Tank
  Object
)
else()
target_link_libraries(Server
  PRIVATE
  MapGenerator
  Multiplayer
  Constants
  Tank
  Object
)
endif()