add_library(Player
  STATIC
  Player.hpp
  Player.cpp
)
if(${APPLE})
target_link_libraries(Player
  PRIVATE
  Object
  Constants
  Sprite
  Projectile
  ${SDL2_LIBRARY}
)
else()
target_link_libraries(Player
  PRIVATE
  Object
  Constants
  Sprite
  Projectile
)
endif()


target_include_directories(Player
  PUBLIC
  .
)
