add_library(Render
  STATIC
  Render.hpp
  Render.cpp
)
if(${APPLE})
target_link_libraries(Render
  PRIVATE
  ${SDL2_LIBRARY}
  ${SDL2_IMAGE_LIBRARIES}
  ${SDL2_TTF_LIBRARIES}
  Constants
  Player
  Object
  Sprite
  Enemy
  Projectile
  MapGenerator
  ImageLoader
  Networking
  Multiplayer
  Box
  Bomb
)
else()
target_link_libraries(Render
  PRIVATE
  SDL2
  SDL2_ttf
  Constants
  Player
  Object
  Sprite
  Enemy
  Projectile
  ImageLoader
  Networking
  Multiplayer
  SDL2_ttf
  Box
  Bomb
)
endif()

target_include_directories(Render
  PUBLIC
  .
)
