add_library(Render
  STATIC
  Render.hpp
  Render.cpp
)
if(${APPLE})
target_link_libraries(Render
  PRIVATE
  ${SDL2_LIBRARY}
  ${SDL2_IMAGE_LIBRARIES}
  Constants
  Tank
  Object
  Sprite
  Projectile
  MapGenerator
  ImageLoader
  Networking
  Multiplayer
)
else()
target_link_libraries(Render
  PRIVATE
  SDL2
  Constants
  Tank
  Object
  Sprite
  Projectile
  ImageLoader
  Networking
  Multiplayer
  SDL2_ttf
)
endif()

target_include_directories(Render
  PUBLIC
  .
)
