add_library(StartUpMenu
  STATIC
  StartUpMenu.cpp
  StartUpMenu.hpp
)
if(${APPLE})
target_link_libraries(StartUpMenu
  PUBLIC
  GameLoop
  ${SDL2_LIBRARY}
  Render
  Args
  MultiplayerMenu
  ImageLoader
  Credits
)
else()
target_link_libraries(StartUpMenu
  PUBLIC
  GameLoop
  SDL2
  Render
  Args
  MultiplayerMenu
  ImageLoader
  Credits
)
endif()

target_include_directories(StartUpMenu
  PUBLIC
  .
)
