add_library(Tank
  STATIC
  Tank.hpp
  Tank.cpp
  Player.hpp
  Player.cpp
  Enemy.hpp
  Enemy.cpp
)

if(${APPLE})
target_link_libraries(Tank
  PRIVATE
  Object
  Constants
  Sprite
  Projectile
  Bomb
  ${SDL2_LIBRARY}
)
else()
target_link_libraries(Tank
  PRIVATE
  Object
  Constants
  Sprite
  Projectile
  Bomb
)
endif()

target_include_directories(Tank
  PUBLIC
  .
)
